--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
        <meta charset="utf-8">
-        <title>FEWD2-Assignment6</title>
+        <title>FEWD2-Assignment6--</title>
         <link href="Assignment6.css" type="text/css" rel="stylesheet"/>
         <script src="Assignment6.js"></script>
     </head>
