--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 <hr>
        <ul>
            <li>Card Number</li>
-           <li><input id="cardNo" type="text"><span id="cardNomsg"></span></li>
+           <li><input id="cardNo" type="text"><div id="cardNoMsg"></div></li>
            <li>CVC code </li> 
-           <li><input id="cvscode" type="text"></li>
+           <li><input id="cvccode" name="cvccode" type="text"></li>
            <li>Expiration Date </li>
            <li>
                <select id="expMonth">
